Adds a CURL wrapper library to help using libcurl
Change-Id: If73bab16a5d4a5258f730c599630bd5fa8e5684f
Signed-off-by: Romain Forlot <romain.forlot@iot.bzh>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@
 PROJECT_TARGET_ADD(afb-utilities)
 
     # Define targets
-    ADD_LIBRARY(${TARGET_NAME} STATIC wrap-json.c filescan-utils.c)
+    ADD_LIBRARY(${TARGET_NAME} STATIC curl-wrap.c escape.c wrap-json.c filescan-utils.c)
 
     # Library properties
     SET_TARGET_PROPERTIES(${TARGET_NAME} PROPERTIES
