Rename cmake target accordingly to the git repo
Change-Id: I7e05205fe392884c25d1370564cad61119894754
Signed-off-by: Romain Forlot <romain.forlot@iot.bzh>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,7 @@
 # app using app-templates subdmodules
 
 # Add target to project dependency list
-PROJECT_TARGET_ADD(afb-utilities)
+PROJECT_TARGET_ADD(afb-helpers)
 
     # Define targets
     ADD_LIBRARY(${TARGET_NAME} STATIC curl-wrap.c escape.c wrap-json.c filescan-utils.c)
