Remove deprecated use of cmake/Qt macro
Last versions of cmake/Qt don't need the use of some macro anymore.
It allows you to put *.qrc files as sources files, which are
resources files. Those files need to be processed by a Qt's tool to
be transformed as C++ sources files.

Change-Id: Ide4b6eef53b3f6edfeac3c0553c79ce4277b1b7b
Signed-off-by: Loïc Collignon <loic.collignon@iot.bzh>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@
 # Add target to project dependency list
 PROJECT_TARGET_ADD(afb-helpers)
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTORCC ON)
 
 	set(AFB_HELPERS_SRCS wrap-json.c filescan-utils.c escape.c)
 
@@ -48,7 +49,7 @@ set(CMAKE_AUTOMOC ON)
 
 	if (AFB_HELPERS_QTWSCLIENT)
 		target_link_libraries(${TARGET_NAME} Qt5::WebSockets)
-		qt5_use_modules(${TARGET_NAME} WebSockets)
+		#qt5_use_modules(${TARGET_NAME} WebSockets)
 	endif()
 
 	if (CURL_FOUND)
