Set PROJECT_VERSION overwritable by cli
Use AGLVERSION variable that could be set by command-line to
override the one set in the CMakeLists.txt file.
Tiny fix on the Libs variable to use now ${libdir} instead of
the CMake variable which isn't absolute

Change-Id: Ic8137766ee3a0fb5b51cc49d2ea39d8d66e48b3f
Signed-off-by: Romain Forlot <romain.forlot@iot.bzh>

--- a/afb-helpers-qt.pc.in
+++ b/afb-helpers-qt.pc.in
@@ -25,5 +25,5 @@ Name: @TARGET_NAME@-qt
 Description: @PROJECT_DESCRIPTION@ and Qt
 Version: @PROJECT_VERSION@
 URL: @PROJECT_URL@
-Libs: -L@CMAKE_INSTALL_LIBDIR@ -l@TARGET_NAME@-qt
+Libs: -L${libdir} -l@TARGET_NAME@-qt
 Cflags: -I${includedir}
