--- a/afb-helpers.pc.in
+++ b/afb-helpers.pc.in
@@ -25,6 +25,6 @@ Name: @TARGET_NAME@
 Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 URL: @PROJECT_URL@
-Libs: -L@CMAKE_INSTALL_LIBDIR@ -l@TARGET_NAME@
+Libs: -L${libdir} -l@TARGET_NAME@
 Cflags: -I${includedir}
 
