afb-helpers-book: changing name of the section
Change-Id: Ie5b3a6c287d50cc42b968c1632a39f33b41f1157
Signed-off-by: Clément Bénier <clement.benier@iot.bzh>

--- a/docs/afb-helpers-book.yml
+++ b/docs/afb-helpers-book.yml
@@ -2,7 +2,7 @@ type: books
 books:
 -
     id: afb-helpers
-    title:  AFB Helper functions reference
+    title:  AFB Helper Guide
     description:  AFB Helper functions reference documentation
     keywords:
     author: "IotBzh"
