Follow mass rename of Redpesk packages
Change-Id: I4686c2e8fb591d54427b7c0944f313e9d12049ac
Signed-off-by: Romain Forlot <romain.forlot@iot.bzh>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,7 +43,7 @@ option(AFB_HELPERS_QT "Enable the Qt helpers functions for the Application Frame
 
 INCLUDE(FindPkgConfig)
 set (PKG_REQUIRED_LIST
-    afb-daemon
+    afb-binding
 )
 
 find_package(CURL REQUIRED)
