Add plugins management for replacing controller
Rename of files. Add some functions to handle the linked list of
plugins to unload, load and search.

Change-Id: Ibdeda75a2afeb5a92ba13712053a089e15e1d49c
Signed-off-by: Romain Forlot <romain.forlot@iot.bzh>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,9 +80,11 @@ if(${AFB_HELPERS})
     set(AFB_HELPERS_HEADERS
         afb-helpers-utils.h
         afb-timer.h
+    	afb-plugin-helpers.h
         curl-wrap.h
         escape.h
         filescan-utils.h
+        json.hpp
         wrap-base64.h
         wrap-json.h
     )
