--- a/afb-libhelpers.pc.in
+++ b/afb-libhelpers.pc.in
@@ -26,5 +26,5 @@ Description: @PROJECT_DESCRIPTION@
 Version: @PROJECT_VERSION@
 URL: @PROJECT_URL@
 Libs: -L${libdir} -l@PROJECT_NAME@
-Cflags: -I${includedir}
+Cflags: -I${includedir} -I${includedir}/@PROJECT_NAME@
 
