[cmake]Isolate headers in a dedicated directory.
Change-Id: I7c22db4b89481d11127e492fa7c0b60901b2cf32
Signed-off-by: Romain Forlot <romain.forlot@iot.bzh>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,7 +109,7 @@ if(${AFB_HELPERS})
             DESTINATION ${CMAKE_INSTALL_LIBDIR}
         )
     INSTALL(FILES ${AFB_HELPERS_HEADERS}
-            DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+            DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
         )
 endif()
 
