Handle version 3 with old library name
afb-libhelpers is a rename of afb-helpers, idea here is to use the old
name for the old version 3 and the new name for the new version 4

Change-Id: Iea370b4815ab9e0915fab104288197fdaaa80992
Signed-off-by: Romain Forlot <romain.forlot@iot.bzh>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -138,7 +138,7 @@ if(${AFB_HELPERS_V3} OR ${AFB_HELPERS_V4})
         target_link_libraries(${PROJECT_NAME}-v3 curl)
         target_compile_definitions(${PROJECT_NAME}-v3 PUBLIC -DAFB_BINDING_VERSION=3)
         set_target_properties(${PROJECT_NAME}-v3 PROPERTIES
-            OUTPUT_NAME ${PROJECT_NAME}
+            OUTPUT_NAME afb-helpers
             SOVERSION 3
         )
         INSTALL(TARGETS ${PROJECT_NAME}-v3
@@ -157,6 +157,13 @@ INSTALL(FILES
     DESTINATION
     ${CMAKE_INSTALL_LIBDIR}/pkgconfig
     )
+
+CONFIGURE_FILE(afb-helpers.pc.in afb-helpers.pc @ONLY)
+INSTALL(FILES
+        ${CMAKE_CURRENT_BINARY_DIR}/afb-helpers.pc
+        DESTINATION
+        ${CMAKE_INSTALL_LIBDIR}/pkgconfig
+        )
 
 if(${AFB_HELPERS_QT})
     message(STATUS "Qt's support enabled!")
